[gd_scene load_steps=6 format=2]

[ext_resource path="res://img Pokemon/img Fight/Graphique/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Fight/UIAttaqueInformation/UIAttaqueInformation.tscn" type="PackedScene" id=2]
[ext_resource path="res://img Pokemon/img Fight/UIAttaque/CadreUIAttaque.png" type="Texture" id=3]
[ext_resource path="res://Fight/UIAttaque/UIAttaque.gd" type="Script" id=4]
[ext_resource path="res://Font/45Font.tres" type="DynamicFont" id=5]

[node name="UIAttaque" type="Popup"]
margin_top = 426.0
margin_right = 1026.0
margin_bottom = 598.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
margin_right = 680.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BG"]
margin_top = -1.43195
margin_right = 680.0
margin_bottom = 170.568
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="TextureRect" parent="."]
margin_left = 65.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 67.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow2" type="TextureRect" parent="."]
visible = false
margin_left = 365.0
margin_top = 32.0
margin_right = 388.0
margin_bottom = 67.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow3" type="TextureRect" parent="."]
visible = false
margin_left = 65.0
margin_top = 94.0
margin_right = 88.0
margin_bottom = 129.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow4" type="TextureRect" parent="."]
visible = false
margin_left = 365.0
margin_top = 94.0
margin_right = 388.0
margin_bottom = 129.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque1" type="Label" parent="."]
margin_left = 100.0
margin_top = 32.0
margin_right = 316.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATTAQUE1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque2" type="Label" parent="."]
margin_left = 400.0
margin_top = 32.0
margin_right = 616.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATTAQUE2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque3" type="Label" parent="."]
margin_left = 100.0
margin_top = 95.0
margin_right = 316.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATTAQUE3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque4" type="Label" parent="."]
margin_left = 400.0
margin_top = 95.0
margin_right = 616.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATTAQUE4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIAttaqueInformation1" parent="." instance=ExtResource( 2 )]
visible = true
popup_exclusive = true

[node name="UIAttaqueInformation2" parent="." instance=ExtResource( 2 )]
visible = true
popup_exclusive = true

[node name="UIAttaqueInformation3" parent="." instance=ExtResource( 2 )]
visible = true
popup_exclusive = true

[node name="UIAttaqueInformation4" parent="." instance=ExtResource( 2 )]
visible = true
popup_exclusive = true
